@@ -1,5 +1,10 @@
 2015-10-19  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/67900
+	* resolve.c (gfc_verify_binding_labels): Check for NULL pointer.
+
+2015-10-19  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/68019
 	* decl.c (add_init_expr_to_sym): Remove an assert() to allow an error
 	message to be issued.
